Factor out a get_char_pixels method for clarity.

https://bugzilla.gnome.org/show_bug.cgi?id=647284